# hand-drawn

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Camera.cpp.14EA0F287882C372.idx  Camera.h.3FAED47622D2384B.idx  Mesh.cpp.F38AACE9E251DBB8.idx  Mesh.h.485CF6549F6448E1.idx  Model.cpp.91EC31C6722F6899.idx  Model.h.DD55DB109C0D4761.idx  Shader.cpp.D242673D24CD4FAA.idx  Shader.h.57EB8B1CDDD38883.idx  Skybox.cpp.A641C87C6181BA1F.idx  Skybox.h.9C6C170083BED8E0.idx  Texture.cpp.9DF1316BF1FAA76A.idx  Texture.h.C66D5279EBACC36F.idx  glad.c.6EE1FF1F30A6A98B.idx  main.cpp.F658942DC979AD07.idx  stb_image.h.9F77FAF8AC1E2528.idx
assets/: scene.mtl
include/: Camera.h  Mesh.h  Model.h  Shader.h  Texture.h
src/cpp/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
src/glsl/: blur_pass.frag  color_pass.frag  color_pass.vert  double_threshold_pass.frag  hysteresis_pass.frag  mag_threshold_pass.frag  sobel_pass.frag  sobel_pass.vert
